Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.2.3
  FEATURES:
    * New main toolbar with completely redesigned look and new features.
      Contributed by Thomas Luebking <thomas.luebking@web.de>.
    * Podcasts can now be grouped per provider like iPod Podcasts, Local Podcasts,
      USB Mass Storage, etc. This can be toggled using a button in the Podcast
      Category.
    * The playlist context menu now has a "Show in Media Sources" action for
      many types of track.
    * The collection scanner now also looks for cover images named
     "folder.*". Apparently some applications use this convention. (BR 224692)
    * It's now possible to automatically use a USB Mass Storage device as a
      collection when it's connected.
    * The progress bar tooltip now shows the position in the track that the
      cursor is hovering, making it simple to jump to a specific position.
    * D-Bus: Added StopAfterCurrent method for /Player.
    * You can now elect to rescan specific folders. Right-click on a folder in
      the collection setup dialog to rescan just that folder. This will only
      work for folders that have previously been added to the collection, i.e.
      you cannot check a folder and immediately rescan it. This will never be
      recursive (as that defeats the point of scanning a specific folder!)
    * Non collection files with a cue sheet will now load their tracks as
      individual tracks in the playlist instead of as one big track with
      bookmark markers.
    * Dynamic Collection is back. (BR 171213)
    * Searching covers from Last.fm using custom query in interactive mode.
 
  CHANGES:
    * All move/copy operations to the local collection are asynchronous.
    * Proper handling of disk full and permision errors for copy/move
      operations to the local collection.
    * A preview of the moving/copying operations is now shown in the Organize
      dialog.