@@ -23,10 +23,11 @@
 #include "meta/Meta.h"
 #include "SmartPointerList.h"
 
-#include <QPointer>
-
 #include <KAction>
 #include <KSystemTrayIcon> //baseclass
+
+#include <QPointer>
+#include <QTime>
 
 class QEvent;
 class App;
@@ -77,6 +78,8 @@ private:
     QPixmap m_playOverlay, m_pauseOverlay;
     SmartPointerList<QAction> m_extraActions;
     QPointer<QAction> m_separator;
+
+    static QTime lastEventCall;
 };
 
 }
